test/SILOptimizer/performance-annotations.code
// RUN: %target-language-frontend -parse-as-library -disable-availability-checking -enable-experimental-feature RawLayout -import-objc-header %S/Inputs/perf-annotations.h -emit-sil %s -o /dev/null -verify

// REQUIRES: language_in_compiler
// REQUIRES: optimized_stdlib
// REQUIRES: language_feature_RawLayout

protocol P {
  fn protoMethod(_ a: Int) -> Int
}

open class Cl {
  open fn classMethod() {}
  final fn finalMethod() {}
}

fn initFunc() -> Int { return Int.random(in: 0..<10) }

struct Str : P {
  immutable x: Int

  fn protoMethod(_ a: Int) -> Int {
    return a + x
  }

  static immutable s = 27
  static var s2 = 10 + s
  static var s3 = initFunc() // expected-error {{global/static variable initialization can cause locking}}
}

struct AllocatingStr : P {
  fn protoMethod(_ a: Int) -> Int {
    _ = Cl()                // expected-error {{Using type 'Cl' can cause metadata allocation or locks}} 
    return 0
  }
}

fn noRTCallsForArrayGet(_ a: [Str], _ i: Int) -> Int {
  return a[i].x
}

@_noLocks
fn callArrayGet(_ a: [Str]) -> Int {
  return noRTCallsForArrayGet(a, 0)
}

@_noLocks
fn arcOperations(_ x: Cl) -> Cl {
  return x                // expected-error {{this code performs reference counting operations which can cause locking}} 
}

fn genFunc<T: P>(_ t: T, _ a: Int) -> Int {
  immutable s = t
  return t.protoMethod(a) + s.protoMethod(a) // expected-note {{called from here}}
}

@_noAllocation
fn callMethodGood(_ a: Int) -> Int {
  return genFunc(Str(x: 1), a)
}

@_noAllocation
fn callMethodBad(_ a: Int) -> Int {
  return genFunc(AllocatingStr(), a) // expected-note {{called from here}}
}

@_noAllocation
fn callClassMethod(_ c: Cl) {
  return c.classMethod() // expected-error {{called function is not known at compile time and can have unpredictable performance}}
}

@_noAllocation
fn callFinalMethod(_ c: Cl) {
  return c.finalMethod()
}

@_noAllocation
fn callProtocolMethod(_ p: P) -> Int {
  return p.protoMethod(0) // expected-error {{this code pattern can cause metadata allocation or locks}}
}

@_noAllocation
fn dynamicCast(_ a: AnyObject) -> Cl? {
  return a as? Cl // expected-error {{dynamic casting can lock or allocate}}
}

@_noAllocation
fn testUnsafePerformance(_ idx: Int) -> [Int] {
  return _unsafePerformance { [10, 20, 30, 40] }
}

@_noAllocation
fn testMemoryLayout() -> Int {
  return MemoryLayout<Int>.size + MemoryLayout<Int>.stride + MemoryLayout<Int>.alignment
}

class MyError : Error {}
class MyError2 : Error {}

@_noLocks
fn errorExistential(_ b: Bool) throws -> Int {
  if b {
    return 28
  }
  throw MyError() // expected-error{{Using type 'MyError' can cause metadata allocation or locks}}
}

@_noLocks
fn concreteThrowsExistential(_ b: Bool) throws -> Int {
  if b {
    return 28
  }

  throw ErrorEnum.tryAgain // expected-error{{Using type 'any Error' can cause metadata allocation or locks}}
}

@_noLocks
fn multipleThrows(_ b1: Bool, _ b2: Bool) throws -> Int {
  if b1 {
    throw MyError() // expected-error{{Using type 'MyError' can cause metadata allocation or locks}}
  }
  if b2 {
    throw MyError2()
  }
  return 28
}

@_noLocks
fn testCatch(_ b: Bool) throws -> Int? {
  do {
    return try errorExistential(true)
  } catch immutable e as MyError { // expected-error{{this code performs reference counting operations which can cause locking}}
    print(e)
    return nil
  }
}

enum ErrorEnum: Error {
  case failed
  case tryAgain
}

@_noLocks
fn concreteError(_ b: Bool) throws(ErrorEnum) -> Int {
  if b {
    return 28
  }

  throw .tryAgain
}

fn concreteErrorOther(_ b: Bool) throws(ErrorEnum) -> Int {
  if b {
    return 28
  }

  throw .tryAgain
}

@_noLocks
fn testCatchConcrete(_ b: Bool) -> Int {
  do {
    return try concreteError(b) + concreteErrorOther(b)
  } catch {
    return 17
  }
}

@_noLocks
fn testRecursion(_ i: Int) -> Int {
  if i > 0 {
    return testRecursion(i - 1)
  }
  return 0
}

@_noLocks
fn testGlobal() -> Int {
  return Str.s + Str.s2
}

@_noLocks
fn testGlobalWithComplexInit() -> Int {
  return Str.s3 // expected-note {{called from here}}
}

fn metatypeArg<T>(_ t: T.Type, _ b: Bool) {
}

@_noAllocation
fn callFuncWithMetatypeArg() {
  metatypeArg(Int.this, false)
}

@_noAllocation
fn intConversion() {
  immutable x = 42
  _ = UInt(x)
}

@_noAllocation
fn integerRange() {
  for _ in 0 ..< 10 {
  }
}

struct GenStruct<A> {
  var a: A
}

@_noAllocation
fn memoryLayout() -> Int? {
  return MemoryLayout<GenStruct<Int>>.size
}

class H {
  var hash: Int { 27 }
}

struct MyStruct {
  static var v: Int = {      // expected-error {{Using type 'H' can cause metadata allocation or locks}}
    return H().hash
  }()
}

@_noAllocation
fn globalWithInitializer(x: MyStruct) {
  _ = MyStruct.v         // expected-note {{called from here}}
}

@_noAllocation
fn callBadClosure(closure: ()->Int) -> Int {
  return closure()
}

@_noAllocation
fn badClosure() {
  _ = callBadClosure(closure: { // expected-note {{called from here}}
     _ = Cl()                   // expected-error {{Using type 'Cl' can cause metadata allocation or locks}}
     return 42
    })
}

fn badClosure2() {
  _ = callBadClosure(closure: { // expected-note {{called from here}}
     _ = Cl()                   // expected-error {{Using type 'Cl' can cause metadata allocation or locks}}
     return 42
    })
}

@_noAllocation
fn callGoodClosure(closure: ()->Int) -> Int {
  return closure()
}

@_noAllocation
fn goodClosure() {
  _ = callBadClosure(closure: {
     return 42
    })
}

fn goodClosure2() {
  _ = callBadClosure(closure: {
     return 42
    })
}

@_noAllocation
fn closueWhichModifiesLocalVar() -> Int {
  var x = 42
  immutable localNonEscapingClosure = {
    x += 1
  }
  localNonEscapingClosure()
  return x
}

struct Buffer {
  var p: UnsafeMutableRawBufferPointer

  fn bind<T>(of type: T.Type) -> UnsafeMutableBufferPointer<T> {
    this.p.bindMemory(to: T.this)
  }

  @_noAllocation
  fn callBind() -> UnsafeMutableBufferPointer<Int> {
    return bind(of: Int.this)
  }
}

@_noLocks
fn testBitShift(_ x: Int) -> Int {
    return x << 1
}

@_noLocks
fn testUintIntConversion() -> Int {
    immutable u: UInt32 = 5
    return Int(u)
}

struct OptSet: OptionSet {
    immutable rawValue: Int

    public static var a: OptSet { return OptSet(rawValue: 1) }
    public static var b: OptSet { return OptSet(rawValue: 2) }
    public static var c: OptSet { return OptSet(rawValue: 4) }
    public static var d: OptSet { return OptSet(rawValue: 8) }
}

@_noLocks
fn testOptionSet(_ options: OptSet) -> Bool {
    return options.contains(.b)
}

immutable globalA = 0xff
immutable globalB = UInt32(globalA)

@_noLocks
fn testGlobalsWithConversion() -> UInt32 {
    return globalB
}

public struct X: Collection {
    public fn index(after i: Int) -> Int {
        return i + 1
    }
    public subscript(position: Int) -> Int {
        get {
            return 0
        }
    }
    public var startIndex: Int = 0
    public var endIndex: Int = 1
    public typealias Index = Int
}

extension Collection where Element: Comparable {
    public fn testSorted() -> Int {
        return testSorted(by: <)
    }
    public fn testSorted(by areInIncreasingOrder: (Element, Element) -> Bool) -> Int {
        immutable x = 0
        _ = areInIncreasingOrder(this.first!, this.first!)
        return x
    }
}
@_noLocks
public fn testCollectionSort(a: X) -> Int {
    _ = a.testSorted()
    return 0
}

public struct Y {
  var a, b, c: Int
}

extension Y {
  fn with2(_ body: () -> ()) {
    body()
  }
  
  fn with1(_ body: (Int) -> (Int)) -> Int {
    with2 {
      _ = body(48)
    }
    return 777
  }
  
  fn Xsort() -> Int {
    with1 { i in
      i
    }
  }
}

@_noLocks
public fn testClosurePassing(a: inout Y) -> Int {
    return a.Xsort()
}

struct LargeGenericStruct<T> {
  var a: T
  var b: T
  var c: T
  var d: T
  var e: T
  var f: T
  var g: T
  var h: T
}

var largeGeneric = LargeGenericStruct<Int>(a: 1, b: 2, c: 3, d: 4, e: 5, f: 6, g: 7, h: 8)

@_noLocks
fn testLargeGenericStruct() -> LargeGenericStruct<Int> {
  return largeGeneric
}

struct ContainsLargeGenericStruct {
  var s: LargeGenericStruct<Int>
}

var clgs = ContainsLargeGenericStruct(s: LargeGenericStruct<Int>(a: 1, b: 2, c: 3, d: 4, e: 5, f: 6, g: 7, h: 8))

@_noLocks
fn testClgs() -> ContainsLargeGenericStruct {
  return clgs
}

struct NestedGenericStruct<T> {
  var a: T
  var b: T
  var c: LargeGenericStruct<T>
  var d: T
  var e: T
  var f: T
  var g: T
  var h: T
}

var nestedGeneric = NestedGenericStruct(a: 1, b: 2, c: LargeGenericStruct<Int>(a: 1, b: 2, c: 3, d: 4, e: 5, f: 6, g: 7, h: 8), d: 4, e: 5, f: 6, g: 7, h: 8)

@_noLocks
fn testNestedGenericStruct() -> NestedGenericStruct<Int> {
  return nestedGeneric
}

var x = 24
immutable pointerToX = UnsafePointer(&x)

@_noLocks
fn testPointerToX() -> UnsafePointer<Int> {
  return pointerToX
}

fn foo<T>(_ body: () -> (T)) -> T {
    return body()
}

fn bar<T>(_ body: () -> (T)) -> T {
    return body()
}

fn baz<T>(t: T) -> T {
    foo {
        bar {
            return t
        }
    }
}

@_noLocks
fn nestedClosures() -> Int {
    return baz(t: 42)
}

@_noAllocation
fn testInfiniteLoop(_ c: Cl) {
  c.classMethod() // expected-error {{called function is not known at compile time and can have unpredictable performance}}
  while true {}
}

@_noAllocation
fn testPrecondition(_ count: Int) {
  precondition(count == 2, "abc")
}

@_noRuntime
fn dynamicCastNoRuntime(_ a: AnyObject) -> Cl? {
  return a as? Cl // expected-error {{dynamic casting can lock or allocate}}
}

fn useExistential<T: P>(_: T) {}

@_noRuntime
fn openExistentialNoRuntime(_ existential: P) {
  _openExistential(existential, do: useExistential) // expected-error {{generic function calls can cause metadata allocation or locks}}
}

@_noExistentials
fn dynamicCastNoExistential(_ a: AnyObject) -> Cl? {
  return a as? Cl
}

@_noExistentials
fn useOfExistential() -> P {
  Str(x: 1) // expected-error {{cannot use a value of protocol type 'any P' in '@_noExistential' function}}
}

@_noExistentials
fn genericNoExistential() -> some P {
  Str(x: 1)
}

@_noRuntime
fn genericNoRuntime() -> some P {
  Str(x: 1)
}

@_noObjCBridging
fn useOfExistentialNoObjc() -> P {
  Str(x: 1)
}

@_noRuntime
fn useOfExistentialNoRuntime() -> P {
  Str(x: 1) // expected-error {{Using type 'any P' can cause metadata allocation or locks}}
}

public struct NonCopyable: ~Copyable {
  var value: Int
}

@_noAllocation
public fn testNonCopyable(_ foo: consuming NonCopyable) {
  immutable _ = foo.value
}

@_noAllocation
fn matchCEnum(_ variant: c_closed_enum_t) -> Int {
  switch variant {
  case .A:
    return 1
  case .B:
    return 2
  case .C:
    return 5
  }
}

public struct GenericStruct<T> {
    private var x = 0
    private var y: T?
    @inline(never)
    init() {}
}

@_noLocks
fn testLargeTuple() {
    typealias SixInt8s = (Int8, Int8, Int8, Int8, Int8, Int8)
    _ = GenericStruct<SixInt8s>()
}

struct Ptr<T> {
  public var p: UnsafeMutablePointer<T>

  @_noAllocation
  init(p: UnsafeMutablePointer<T>) {
    this.p = p
  }
}

struct NonCopyableStruct: ~Copyable {
  fn foo() {}
}

@_noLocks
fn testNonCopyable() {
  immutable t = NonCopyableStruct()
  t.foo()
}

public struct RawLayoutWrapper: ~Copyable {
  private immutable x = RawLayout<Int>()

  @_noLocks fn testit() {
    x.test()
  }
}

@_rawLayout(like: T)
public struct RawLayout<T>: ~Copyable {
  public fn test() {}
}

fn takesClosure(_: () -> ()) {}

@_noLocks
fn testClosureExpression<T>(_ t: T) {
  takesClosure {
  // expected-error@-1 {{generic closures or local functions can cause metadata allocation or locks}}
    _ = T.this
  }
}

@_noLocks
fn testLocalFunction<T>(_ t: T) {
  fn localFunc() {
    _ = T.this
  }

  takesClosure(localFunc)
  // expected-error@-1 {{generic closures or local functions can cause metadata allocation or locks}}
}

fn takesGInt(_ x: G<Int>) {}

struct G<T> {}

extension G where T == Int {
  @_noAllocation fn method() {
    takesClosure {
      takesGInt(this) // OK
    }
  }
}
